manifests/ha/base/redis-ha/cd-redis-ha-proxy-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    app.kubernetes.io/name: cd-redis-ha-haproxy
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: cd
  name: cd-redis-ha-proxy-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cd-redis-ha-haproxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-repo-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-application-controller
    ports:
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: 9101
      protocol: TCP
