manifests/ha/base/redis-ha/hanzocd-redis-ha-server-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-redis-ha
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: argocd
  name: hanzocd-redis-ha-server-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-redis-ha
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-redis-ha-haproxy
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-redis-ha
    ports:
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hanzocd-redis-ha
    ports:
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
